logs/aztex.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/aztex'...
Compiling './lib/python3.5/site-packages/aztex/AztexRunnerText.py'...
***   File "./lib/python3.5/site-packages/aztex/AztexRunnerText.py", line 30
    print '\n'.join(map(lambda x: str(x), compiler.get_representation(md_text)))
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aztex/Element.py'...
***   File "./lib/python3.5/site-packages/aztex/Element.py", line 150
    print uolist
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/aztex/Equation.py'...
***   File "./lib/python3.5/site-packages/aztex/Equation.py", line 249
    print p.parseEquation(equation).left
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aztex/LatexOutput.py'...
***   File "./lib/python3.5/site-packages/aztex/LatexOutput.py", line 177
    print text
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/aztex/TestSuiteRunner.py'...
***   File "./lib/python3.5/site-packages/aztex/TestSuiteRunner.py", line 31
    print f + ':\n'
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/aztex/Tokenizer.py'...
***   File "./lib/python3.5/site-packages/aztex/Tokenizer.py", line 25
    print "==== 1 ===="
                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/aztex-0.0.3.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
